[gd_scene format=3 uid="uid://qj0ekajddbjr"]

[ext_resource type="Script" uid="uid://dus2sfc82h77p" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://blgnaohv2rbs8" path="res://ASSETS/Characters/Korrk.png" id="2_6t5aa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("2_6t5aa")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("2_6t5aa")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pu2lt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}],
"loop": true,
"name": &"DOWN",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}],
"loop": true,
"name": &"LEFT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}],
"loop": true,
"name": &"RIGHT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}],
"loop": true,
"name": &"UP",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(18, 46)

[node name="Player" type="CharacterBody2D" unique_id=706892571]
floor_snap_length = 19.0
script = ExtResource("1_cvnsp")
speed = 150
maxVelocity = 100
pushForce = 90

[node name="Animation" type="AnimatedSprite2D" parent="." unique_id=1351693717]
sprite_frames = SubResource("SpriteFrames_pu2lt")
animation = &"RIGHT"
speed_scale = 0.9

[node name="PlayerCollider" type="CollisionShape2D" parent="." unique_id=505232968]
shape = SubResource("RectangleShape2D_cvnsp")

[node name="RayCastDownLeft" type="RayCast2D" parent="." unique_id=1122602427]
position = Vector2(0, 23)
target_position = Vector2(-10, 0)

[node name="RayCastDownRight" type="RayCast2D" parent="." unique_id=93476988]
position = Vector2(0, 23)
target_position = Vector2(10, 0)

[node name="RayCastUpLeft" type="RayCast2D" parent="." unique_id=1727953792]
target_position = Vector2(-10, 0)

[node name="RayCastUpRight" type="RayCast2D" parent="." unique_id=1304152240]
target_position = Vector2(10, 0)
